src/tests/snapshots/amber__tests__translating__mul_num_expression.ab__bash-4.3.snap
---
source: src/tests/translating.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            Log(
                LogFragment {
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN {result = ARGV[1]",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "*",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2]; sub(/^0\\./, \".\", result); print result }'",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "5.5",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "3.2",
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: true,
                        },
                    ),
                },
            ),
            Log(
                LogFragment {
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN {result = ARGV[1]",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "*",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2]; sub(/^0\\./, \".\", result); print result }'",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Subprocess(
                                            SubprocessFragment {
                                                fragment: List(
                                                    ListFragment {
                                                        values: [
                                                            Raw(
                                                                RawFragment {
                                                                    value: "awk 'BEGIN {result = ARGV[1]",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "*",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "ARGV[2]; sub(/^0\\./, \".\", result); print result }'",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "2.1",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "4.0",
                                                                },
                                                            ),
                                                        ],
                                                        separator: Empty,
                                                    },
                                                ),
                                                quoted: true,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "6.3",
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: true,
                        },
                    ),
                },
            ),
            Log(
                LogFragment {
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN {result = ARGV[1]",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "*",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2]; sub(/^0\\./, \".\", result); print result }'",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Subprocess(
                                            SubprocessFragment {
                                                fragment: List(
                                                    ListFragment {
                                                        values: [
                                                            Raw(
                                                                RawFragment {
                                                                    value: "awk 'BEGIN {result = ARGV[1]",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "*",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "ARGV[2]; sub(/^0\\./, \".\", result); print result }'",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                },
                                                            ),
                                                            Subprocess(
                                                                SubprocessFragment {
                                                                    fragment: List(
                                                                        ListFragment {
                                                                            values: [
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: "awk 'BEGIN {result = ARGV[1]",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: "*",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: "ARGV[2]; sub(/^0\\./, \".\", result); print result }'",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: " ",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: "1.0",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: " ",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: "2.5",
                                                                                    },
                                                                                ),
                                                                            ],
                                                                            separator: Empty,
                                                                        },
                                                                    ),
                                                                    quoted: true,
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "3.1",
                                                                },
                                                            ),
                                                        ],
                                                        separator: Empty,
                                                    },
                                                ),
                                                quoted: true,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "4.7",
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: true,
                        },
                    ),
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
